--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="ruler">
             <div class="logo"> </div>
         </div>
-        <table>
+        <div id="runes" class="runes">ᚴᚱᚬᚾᛁᛏ ᚼᚬᛏᛁ</div>
+        <table id="info" class="hide">
             <tr>
               <th>Date:</th>
               <td>10-11</td>
