update format, update season logo

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
 		<title>Document</title>
 	</head>
 	<body>
+		<a class="about" href="about.html">About</a>
 		<div class="container">
-			<div>
-				<div class="logo"></div>
+			<div class="season" id="season"></div>
+			<div class="logos">
+				<div class="logo" id="logo">
+					
+				</div>
 				<div class="ruler">
 					<div></div>
 					<div></div>
@@ -22,7 +26,7 @@
         <div class="rune" id="rune" ></div>
         <div class="info" id="info" style="opacity: 0;">
           <div class="name" id="name"></div>
-          <div id="date"></div>
+          <div id="date" class="date"></div>
           <div class="des" id="des">
           </div>
         </div>
@@ -31,6 +35,6 @@
     <img class="hide" id="boat"  src="../assets/img/basic.PNG" />
     <img class="hide" id="with-shield" src="../assets/img/with_shield.PNG"  />
     <img class="hide" id="helmet" src="../assets/img/helmet.png" />
-    <footer>about</footer>
+    <footer>© 2024 Nisse Production. Code licensed under the <a href="https://opensource.org/licenses/MIT" style="color:#6e6960">MIT License</a>.</footer>
 	</body>
 </html>
