--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,9 @@
 		<a class="about" href="about.html">About</a>
 		<div class="container">
 			<div class="season" id="season"></div>
-			<div class="logos">
+			<div class="logo_container">
 				<div class="logo" id="logo">
 					
-				</div>
-				<div class="ruler">
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
 				</div>
 			</div>
 
