--- a/src/about.html
+++ b/src/about.html
@@ -13,7 +13,7 @@
         <h2 id="about">About</h2>
         <p>For primstav, if you want more information, can check: <a href="https://snl.no/primstav">primstav -
                 leksikon</a>.</p>
-        <p>The data for the calendar is from <a
+        <p>The data for the calendar is based on <a
                 href="https://www.titan.uio.no/blogg/sverre-holm/2015/en-moderne-primstav.html">En moderne primstav -
                 UiO</a></p>
         <p>Contact information: nisse.production@gmail.com</p>
