--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Primstav</title>
+		<link rel="icon" href="../assets/favicon.ico">
 	</head>
 	<body>
 		<a class="about" href="about.html">About</a>
@@ -11,7 +12,6 @@
 			<div class="season" id="season"></div>
 			<div class="logo_container">
 				<div class="logo" id="logo">
-					
 				</div>
 			</div>
 
