--- a/src/about.html
+++ b/src/about.html
@@ -16,7 +16,7 @@
         <p>The data for the calendar is based on <a
                 href="https://www.titan.uio.no/blogg/sverre-holm/2015/en-moderne-primstav.html">En moderne primstav -
                 UiO</a></p>
-        <p>Contact information: nisse.production@gmail.com</p>
+        <p>Contact information: nisse.production42@gmail.com</p>
     </div>
 
 </body>
