add README & update layout

--- a/src/about.html
+++ b/src/about.html
@@ -5,17 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="../assets/global.css">
+    <link rel="stylesheet" href="../assets/about.css">
 </head>
 
 <body>
     <div class="about_page">
+        <a href="/">> Go back</a>
         <h2 id="about">About</h2>
+        <p>The layout of the main content is:</p>
+        <div class="intro">
+            <div class="season">
+                Season
+            </div>
+            <div class="container">
+                <div class="logo">Logo</div>
+                <div class="info">
+                    <div>Name / Runes</div>
+                    <div>Date</div>
+                    <div>Description</div>
+                </div>
+            </div>
+
+        </div>
         <p>For primstav, if you want more information, can check: <a href="https://snl.no/primstav">primstav -
                 leksikon</a>.</p>
         <p>The data for the calendar is based on <a
                 href="https://www.titan.uio.no/blogg/sverre-holm/2015/en-moderne-primstav.html">En moderne primstav -
                 UiO</a></p>
+            <br />
         <p>Contact information: nisse.production42@gmail.com</p>
     </div>
 
