--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,11 @@
 	<body>
 		<a class="about" href="about.html">About</a>
 		<div class="container">
-			<div class="season" id="season"></div>
+			<div class="season " id="season">
+				<div class="season_default"></div>
+			</div>
 			<div class="logo_container">
-				<div class="logo" id="logo">
+				<div class="logo logo_default" id="logo">
 				</div>
 			</div>
 
