add: next & previous buttons

--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,18 @@
           </div>
         </div>
 			</div>
+
+			<div class="actions">
+				<button id="pre_btn">< Previous</button>
+				<button id="next_btn">Next ></button>
+			</div>
 		</div>
+	
+	
     <img class="hide" id="boat"  src="../assets/img/basic.PNG" />
     <img class="hide" id="with-shield" src="../assets/img/with_shield.PNG"  />
     <img class="hide" id="helmet" src="../assets/img/helmet.png" />
-    <footer>© 2024 Nisse Production. Code licensed under the <a href="https://opensource.org/licenses/MIT" style="color:#6e6960">MIT License</a>.</footer>
+    
+	<footer>© 2024 Nisse Production. Code licensed under the <a href="https://opensource.org/licenses/MIT" style="color:#6e6960">MIT License</a>.</footer>
 	</body>
 </html>
