fix: build error for special characters

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
 			</div>
 
 			<div class="actions">
-				<button id="pre_btn">< Previous</button>
-				<button id="next_btn">Next ></button>
+				<button id="pre_btn">&#60; Previous</button>
+				<button id="next_btn">Next &#62;</button>
 			</div>
 		</div>
 	
